src/objects/TR1__Offer__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account_Name__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report_Action__c</fullName>
        <formula>HYPERLINK(&apos;/a04/e?retURL=/&apos;&amp;TR1__Offered_To__c&amp;&apos;&amp;saveURL=/apex/UpdateStatus?offerId=&apos;&amp;Id&amp;&apos;-fromContact-&apos;&amp;TR1__Offered_To__c&amp;&apos;&amp;CF00NU0000001Zcm9_lkid=&apos;&amp;TR1__Job__r.TR1__Account__c&amp;&apos;&amp;CF00NU0000001Zcm9=&apos;&amp;TR1__Job__r.TR1__Account__r.Name&amp;&apos;&amp;CF00NU0000001ZXu0=&apos;&amp;TR1__Job__r.Name&amp;&apos;&amp;CF00NU0000001ZXu0_lkid=&apos;&amp;TR1__Job__c&amp;&apos;&amp;CF00NU0000001ZXuQ=&apos; &amp;TR1__Offered_To__r.FirstName&amp;&apos; &apos;&amp;TR1__Offered_To__r.LastName&amp;&apos;&amp;CF00NU0000001ZXuQ_lkid=&apos;&amp;TR1__Offered_To__c&amp;&apos;&amp;nooverride=1&apos;,  IMAGE(&apos;/resource/TR1__closingreport&apos;, &apos;Closing Report&apos;, 25, 25) , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C R</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hourly_Rate_Offered__c</fullName>
        <label>Hourly Rate Offered</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Reporting</label>
        <referenceTo>TR1__Job_Reporting__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Days_in_Stage__c</fullName>
        <formula>IF(IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c = 0, 1, IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Offer_Date__c</fullName>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Offered_To_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offered To Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Offered_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offered To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Reject_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerOfferReject?Id=&apos;&amp;Id&amp;&apos;&amp;retURL=/&apos;&amp;TR1__Offered_To__c&amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Offered_To__c, IMAGE(&apos;/resource/TR1__Reject&apos;, &apos;Revert&apos;, 25,25), &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rjt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notification__c</fullName>
        <label>Rejection Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Rejection Email</fullName>
                </value>
                <value>
                    <fullName>Job Owner Will Notify</fullName>
                </value>
                <value>
                    <fullName>Contact Owner Will Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Revert_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerOfferMoveback?Id=&apos;&amp;Id&amp;&apos;&amp;retURL=/&apos;&amp;TR1__Offered_To__c&amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Offered_To__c, IMAGE(&apos;/resource/TR1__MoveBack&apos;, &apos;Revert&apos;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rvt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Salary_Offered__c</fullName>
        <label>Salary Offered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_End_Date__c</fullName>
        <label>Stage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Start_Date__c</fullName>
        <label>Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <formula>TEXT(TR1__Job_Reporting__r.TR1__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Job Manager Stage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OFF-{00000}-{00}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>